# TickiPeaki

./: .gitignore  README.md  docker-compose.yaml
aviation/: .env.example  Dockerfile  go.mod  go.sum  main.go
aviation-frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
aviation-frontend/src/: App.jsx  index.css
aviation-frontend/src/api/: client.js
aviation/clients/: pdf_client.go  pdf_worker.go
aviation/config/: database.go
aviation/handlers/: auth_handler.go  favorite_handler.go  flight_handler.go  flight_handler_test.go  passenger_handler.go  passenger_handler_test.go  seat_handler.go  ticket_handler.go  ticket_handler_test.go
aviation/middleware/: auth.go  cors.go
aviation/migrations/: 000005_seed_data.down.sql  000005_seed_data.up.sql  000005_seed_flights_and_seats.up.sql  000006_add_seats_refactor.down.sql  000006_add_seats_refactor.up.sql
aviation/models/: favorite.go  flight.go  passenger.go  seat.go  ticket.go  user.go
aviation/repository/: interfaces.go
ticketing/: README.md  go.mod  main.go
ticketing/handlers/: flight_handler.go  ticket_handler.go
ticketing/models/: flight.go  ticket.go
ticketing/repository/: interfaces.go
tickets/: .dockerignore  .env.example  Dockerfile  pyproject.toml
tickets/src/: main.py
tickets/src/api/v1/: ticket.py
tickets/src/core/: config.py  constants.py  exceptions.py  logger.py
tickets/src/schemas/: ticket.py  ticket_status.py
tickets/src/service/: pdf_service.py  redis_status_service.py  s3_service.py
tickets/templates/: ticket.html
(+19 files in other folders)
